# video-server-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: client.hpp  server.hpp  testing.hpp
src/: client.cpp  main.cpp  server.cpp  testing.cpp
src/testing/: testing1.cpp
